layout issue fixed

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ main{
 #calculator{
     max-width: 400px;
     height: 100vh;
-    margin: 100px auto;
+    margin: 80px auto;
 }
 button{
     width: 75px;
